ACLOCAL_AMFLAGS = -I aclocal/m4
EXTRA_DIST = aclocal/m4
#bin_PROGRAMS = vcmi
#vcmi_LDADD = $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_THREAD_LIB)
AM_CXXFLAGS = $(BOOST_CPPFLAGS)
SUBDIRS = lib client server
#vcmi_SOURCES = \
#	       AdventureMapButton.cpp  CGameState.cpp        \
#	       AdventureMapButton.h    CGameState.h          global.h \
#	       AI_Base.h               CHeroWindow.cpp       int3.h \
#	       CAdvmapInterface.cpp    CHeroWindow.h         map.cpp \
#	       CAdvmapInterface.h      CLua.cpp              map.h \
#	       CBattleInterface.cpp    CLua.h                mapHandler.cpp \
#	       CBattleInterface.h      CLuaHandler.cpp       mapHandler.h \
#	       CCallback.cpp           CLuaHandler.h         nodrze.h \
#	       CCallback.h             CMessage.cpp          SDL_Extensions.cpp \
#	       CCastleInterface.cpp    CMessage.h            SDL_Extensions.h \
#	       CCastleInterface.h      CMT.cpp               SDL_framerate.cpp \
#	       CConsoleHandler.cpp     SDL_framerate.h \
#	       CConsoleHandler.h       CPathfinder.cpp       \
#	       CCursorHandler.cpp      CPathfinder.h         \
#	       CCursorHandler.h        CPlayerInterface.cpp  StartInfo.h \
#	       CGameInfo.cpp           CPlayerInterface.h    stdafx.cpp \
#	       CGameInfo.h             CPreGame.cpp          stdafx.h \
#	       CGameInterface.cpp      CPreGame.h            tchar_amigaos4.h \
#	       CGameInterface.h        timeHandler.h \
#	       hch/CAbilityHandler.cpp   hch/CDefObjInfoHandler.cpp   \
#	       hch/CAbilityHandler.h     hch/CDefObjInfoHandler.h     \
#	       hch/CAmbarCendamo.cpp     hch/CGeneralTextHandler.cpp  \
#	       hch/CAmbarCendamo.h       hch/CGeneralTextHandler.h    \
#	       hch/CArtHandler.cpp       hch/CHeroHandler.cpp         hch/CSndHandler.cpp \
#	       hch/CArtHandler.h         hch/CHeroHandler.h           hch/CSndHandler.h \
#	       hch/CBuildingHandler.cpp  hch/CLodHandler.cpp          hch/CSpellHandler.cpp \
#	       hch/CBuildingHandler.h    hch/CLodHandler.h            hch/CSpellHandler.h \
#	       hch/CMusicHandler.cpp        hch/CTownHandler.cpp \
#	       hch/CMusicHandler.h          hch/CTownHandler.h \
#	       hch/CCreatureHandler.cpp  hch/CObjectHandler.cpp       hch/CVideoHandler.cpp \
#	       hch/CCreatureHandler.h    hch/CObjectHandler.h         hch/CVideoHandler.h \
#	       hch/CDefHandler.cpp       hch/CPreGameTextHandler.cpp \
#	       hch/CDefHandler.h         hch/CPreGameTextHandler.h \
#client/CBitmapHandler.cpp  client/CCreatureAnimation.cpp  client/Client.cpp  client/Graphics.cpp \
#client/CBitmapHandler.h    client/CCreatureAnimation.h    client/Client.h    client/Graphics.h \
#lib/VCMI_Lib.h lib/VCMI_Lib.cpp \
#		server/CScriptCallback.h server/CScriptCallback.cpp \
#		lib/Connection.cpp lib/Connection.h \
#		CThreadHelper.cpp CThreadHelper.h
#
#
